--- a/settings.gradle
+++ b/settings.gradle
@@ -55,6 +55,7 @@ List projects = [
   'plugins:ingest-user-agent',
   'plugins:mapper-murmur3',
   'plugins:mapper-size',
+  'plugins:stored-filter',
   'plugins:repository-azure',
   'plugins:repository-gcs',
   'plugins:repository-hdfs',
